进行一些修缮，验证码模块由简单纯文本改为使用HTML格式